[gd_scene load_steps=5 format=3 uid="uid://bsxn3xv8lgwwj"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_player_script"]
[ext_resource type="SpriteFrames" path="res://assets/sprites/player/player_frames.tres" id="2_sprite_frames"]
[ext_resource type="Script" path="res://scripts/sword_trail.gd" id="3_sword_trail"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="AttackHitbox"]
size = Vector2(60, 40)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 1
collision_mask = 7
script = ExtResource("1_player_script")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1.0, 1.0, 1.0, 1)
scale = Vector2(0.05, 0.05)
sprite_frames = ExtResource("2_sprite_frames")
animation = &"human_idle"
autoplay = "human_idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2
monitoring = false

[node name="AttackHitbox" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(35, 0)
shape = SubResource("AttackHitbox")
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true
position_smoothing_speed = 5.0
limit_left = -320
limit_top = -320
limit_right = 5120
limit_bottom = 640

[node name="HitParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
lifetime = 0.3
one_shot = true
explosiveness = 1.0
randomness = 0.5
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 500)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color = Color(1, 1, 1, 1)

[node name="SwordTrail" type="Line2D" parent="."]
z_index = -1
width = 6.0
default_color = Color(0.7, 0.85, 1.0, 0.4)
script = ExtResource("3_sword_trail")
